load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "build_routes",
    srcs = ["build_routes.bzl"],
    visibility = ["//spa:__subpackages__"],
    deps = ["@aspect_rules_swc//swc"],
)

bzl_library(
    name = "build_server",
    srcs = ["build_server.bzl"],
    visibility = ["//spa:__subpackages__"],
    deps = [
        "@aspect_rules_swc//swc",
    ],
)

bzl_library(
    name = "host",
    srcs = ["host.bzl"],
    visibility = ["//spa:__subpackages__"],
    deps = [
        "@aspect_rules_swc//swc",
        "@build_bazel_rules_nodejs//:index",
        "@npm//webpack:index",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//spa:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//spa:__subpackages__"],
)
