load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

"""Marks this as a package"""

exports_files(["generate-route-manifest.js"])

bzl_library(
    name = "generate_route_manifest",
    srcs = [
        "generate_route_manifest.bzl",
        "@build_bazel_rules_nodejs//:bzl",
    ],
    visibility = ["//spa:__subpackages__"],
)
